--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="G.T.R Base Hospital, Almora"
+      content="Goberdhan Tiwari Government Base Hospital, Almora"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>G.T.R Base Hospital, Almora</title>
+    <title>Goberdhan Tiwari Government Base Hospital, Almora</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
