changed hospital name

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Goberdhan Tiwari Government Base Hospital, Almora"
+      content="Goverdhan Tiwari Government Base Hospital, Almora"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <title>Goberdhan Tiwari Government Base Hospital, Almora</title>
+    <title>Goverdhan Tiwari Government Base Hospital, Almora</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
