--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,70 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico">
     <meta
       name="description"
       content="Goverdhan Tiwari Government Base Hospital, Almora"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="loader.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Goverdhan Tiwari Government Base Hospital, Almora</title>
   </head>
-  <body>
+  <body onload="loadfunc()">
+    <div id="preloader"
+      style="
+      position: fixed;
+      text-align: center;
+      z-index: 9999999;
+      width: 100%;
+      height: 100%;
+      min-width: 100%;
+      background: #f2f2f2;
+      opacity: .8;
+      "
+    >
+      <svg version="1.1" id="loader" xmlns="http://www.w3.org/2000/svg"  x="0px" y="0px"
+      viewBox="0 0 100 100"
+        style="position: fixed;
+        width: 100px;
+        height: 100px;
+        display:inline-block;
+        top: 50%;
+        left: 50%;"
+      >
+      <circle fill="#0074e1" stroke="none" cx="6" cy="50" r="6">
+          <animate
+          attributeName="opacity"
+          dur="1s"
+          values="0;1;0"
+          repeatCount="indefinite"
+          begin="0.1"/>    
+      </circle>
+      <circle fill="#0074e1" stroke="none" cx="26" cy="50" r="6">
+          <animate
+          attributeName="opacity"
+          dur="1s"
+          values="0;1;0"
+          repeatCount="indefinite" 
+          begin="0.2"/>       
+      </circle>
+      <circle fill="#0074e1" stroke="none" cx="46" cy="50" r="6">
+          <animate
+          attributeName="opacity"
+          dur="1s"
+          values="0;1;0"
+          repeatCount="indefinite" 
+          begin="0.3"/>     
+      </circle>
+      </svg>
+    </div>
+    <script>
+      var load = document.getElementById("preloader")
+      function loadfunc() {
+        load.style.display = "none"
+      }
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
