--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <title>Goverdhan Tiwari Government Base Hospital, Almora</title>
   </head>
-  <body onload="loadfunc()">
+  <body onload="loadfunc()" style="background: #f4f4f4">
     <div id="preloader"
       style="
       position: fixed;
